--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.22",
     "lucide-react": "^0.350.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
