feat: add boarder header title, notification and user details new design

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.22",
     "lucide-react": "^0.350.0",
     "mini-svg-data-uri": "^1.4.4",
