--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "lucide-react": "^0.350.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
+    "sonner": "^1.5.0",
     "supabase": "^1.162.4",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
